--- a/src/Pages/Projects/Cards.css
+++ b/src/Pages/Projects/Cards.css
@@ -3,15 +3,15 @@
     flex-wrap: wrap;
     column-gap: 5rem;
     gap: 2rem;
-    justify-content: flex-start;
     margin-bottom: 5rem;
     border-radius: var(--border-radius);
+    justify-content: center;
 }
 
 .card {
     display: flex;
-    padding: 2rem;
-    width: 14rem;
+    padding: 2vw;
+    max-width: 25vw;
     list-style: none;
     border-radius: var(--border-radius);
     background: var(--dark);
@@ -31,7 +31,7 @@
 }
 
 .card-text {
-    font-size: var(--fs-tiny);
+    font-size: var(--fs-small);
     margin-bottom: 1rem;
     color: var(--darker);
 }
